[package]
name = "trollskull-tavern"
version = "0.1.0"
authors = ["Barna RaÌtki <barna.ratki@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.59"
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.web-sys]
version = "0.3.36"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console'
]

[dev-dependencies]
wasm-bindgen-test = "0.3.9"
